--- a/index.html
+++ b/index.html
@@ -1,14 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>Kiwi</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-	<div class="bg"></div>
-	<div class="root">
-		<p>Nothing to see here yet!</p>
-	</div>
-</body>
-</html>
+<title>Redirecting...</title>
+<meta http-equiv="refresh" content="0; URL=/songs" />
