--- a/songs/index.html
+++ b/songs/index.html
@@ -5,22 +5,54 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://raw.githubusercontent.com/samvk/monorale-raleway-sober/master/monorale.css">
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="../theme.css">
+	<link rel="stylesheet" href="../footer.css">
+	<link rel="stylesheet" href="song-list.css">
+	<link rel="stylesheet" href="song.css">
+	<link rel="stylesheet" href="song-list-header.css">
+	<script src="../utils.js"></script>
 	<script src="script.js"></script>
 </head>
 <body>
-	<div class="bg"></div>
 	<div class="root">
-		<div class="content">
-			<form id="song-search" class="song-search">
-				<!-- <label for="song-search-field">Guild ID</label> -->
-				<input class="textfield" type="text" id="song-search-field" name="song-search-field" placeholder="Search...">
-				<!-- <button type="submit" id="generate">Generate Link</button> -->
-			</form>
+		<div class="song-list-screen">
+			<div class="song-list-header">
+				<img id="avatar" class="song-list-header__avatar" />
 
-			<div id="song-list" class="song-list">
+				<div class="song-list-header__content">
+					<div id="title" class="song-list-header__title"></div>
+					<div id="description" class="song-list-header__description"></div>
+				</div>
+			</div>
+
+			<div class="song-list-screen__content">
+				<form id="song-search" class="song-search">
+					<!-- <label for="song-search-field">Guild ID</label> -->
+					<input class="textfield" type="text" id="song-search-field" name="song-search-field" placeholder="Search...">
+					<!-- <button type="submit" id="generate">Generate Link</button> -->
+					<div id="query-info" class="query-info"></div>
+				</form>
+
+
+				<div id="song-list" class="song-list">
+				</div>
+
+				<button id="load-more" class="song-list__load-more">Load More</button>
+			</div>
+
+			<div class="footer">
+			</div>
+
+
+			<div id="song-list-loading" class="song-list-loading">
+				<div class="loader-container">
+					<div class="loader">Loading...</div>
+				</div>
+				<div id="error"></div>
 			</div>
 		</div>
 	</div>
