Add alt to avatar

--- a/songs/index.html
+++ b/songs/index.html
@@ -21,7 +21,7 @@
 	<div class="root">
 		<div class="song-list-screen">
 			<div class="song-list-header">
-				<img id="avatar" class="song-list-header__avatar" />
+				<img id="avatar" class="song-list-header__avatar" alt="Avatar" />
 
 				<div class="song-list-header__content">
 					<div id="title" class="song-list-header__title"></div>
