--- a/songs/index.html
+++ b/songs/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://raw.githubusercontent.com/samvk/monorale-raleway-sober/master/monorale.css">
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
+	<link rel="icon" type="image/png" href="../assets/icon.png">
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="../theme.css">
 	<link rel="stylesheet" href="../footer.css">
