--- a/songs/index.html
+++ b/songs/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Kiwi</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	<!-- Meta Tags -->
+	<title>Kiwi</title>
+	<meta name="description" content="Song requests for Clone Hero streamers">
+
+	<!-- OpenGraph Meta Tags -->
+	<meta property="og:url" content="https://naokoaf.github.io/kiwi/">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Kiwi">
+	<meta property="og:description" content="Song requests for Clone Hero streamers">
+	<meta property="og:image" content="https://naokoaf.github.io/kiwi/assets/icon.png">
+
+	<!-- Imports -->
 	<link rel="stylesheet" href="https://raw.githubusercontent.com/samvk/monorale-raleway-sober/master/monorale.css">
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
+
+	<!-- Icon -->
 	<link rel="icon" type="image/png" href="../assets/icon.png">
+
+	<!-- Styles and Scripts -->
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="../theme.css">
 	<link rel="stylesheet" href="../footer.css">
