Improve difficulty icons

--- a/songs/index.html
+++ b/songs/index.html
@@ -31,6 +31,7 @@
 	<link rel="stylesheet" href="song.css">
 	<link rel="stylesheet" href="song-list-header.css">
 	<script src="../utils.js"></script>
+	<script src="arc-drawer.js"></script>
 	<script src="script.js"></script>
 </head>
 <body>
